--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 **/build
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/Assets/AssetStoreTools*
+unity/[Ll]ibrary/
+unity/[Tt]emp/
+unity/[Oo]bj/
+unity/[Bb]uild/
+unity/[Bb]uilds/
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+unity/Assets/AssetStoreTools*
 
 # Visual Studio 2015 cache directory
 /.vs/
